tests/auto/qml/qqmllanguage/data/derivedFromUnexposedBase.qml
@@ -1,0 +1,6 @@
+import Test
+
+DerivedFromUnexposedBase {
+    group.value: 42
+    groupGadget.value: 42
+}
