tests/auto/qml/qqmllanguage/data/dynamicGroupPropertyRejected.qml
@@ -1,0 +1,5 @@
+import Test
+
+DerivedFromUnexposedBase {
+    dynamic.value: "This should fail"
+}
